# Rust_Python_Template

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
python/example_project/: __init__.py  example_project.pyi  main.py  pyproject.toml
src/: lib.rs
