[tool.poetry]
name = "example-project"
version = "0.1.0"
description = "Template for using Rust together with Python (+Poetry)"
authors = ["RaphSku <rapsku.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "example_project"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
